docker-k8s-workshop/day3/deployment.yaml
# Day3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: day3-node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: day3-node-app
  template:
    metadata:
      labels:
        app: day3-node-app
    spec:
      containers:
      - name: node-app
        image: jaindivyanshu013/day1-image
        ports:
        - containerPort: 8080
