docker-k8s-workshop/day3/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: day3-app-clusterip
spec:
  selector:
    app: day3-node-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
