docker-k8s-workshop/day3/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: day3-app-nodeport
spec:
  selector:
    app: day1-image
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
  type: NodePort
