docker-k8s-workshop/day3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: day3-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: day3.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: day3-app-clusterip
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: day3-app-clusterip
            port:
              number: 80
